--- a/guessing_game/Cargo.toml
+++ b/guessing_game/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
 
 [dependencies]
-
 rand="0.3.0"
+
+[lib]
+path = "src/main.rs"
+crate-type = ["dylib"]
