--- a/nyan/Cargo.toml
+++ b/nyan/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
+authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
 name = "nyan"
 version = "0.1.0"
-authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
 
 [dependencies]
+iron = "0.5.1"
+time = "0.1.38"
 
 [lib]
+crate-type = ["dylib"]
 name = "nyan"
 path = "./src/main.rs"
-crate-type = ["dylib"]
