--- a/nyan/Cargo.toml
+++ b/nyan/Cargo.toml
@@ -5,6 +5,9 @@ version = "0.1.0"
 
 [dependencies]
 iron = "0.5.1"
+mount = "0.3.0"
+router = "0.5.1"
+staticfile = "0.4.0"
 time = "0.1.38"
 
 [lib]
