actually almost the same code as the sample

--- a/suburi/Cargo.toml
+++ b/suburi/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
+authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
 name = "suburi"
 version = "0.1.0"
-authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
 
 [dependencies]
+sdl2 = "0.29.0"
