--- a/suburi/Cargo.toml
+++ b/suburi/Cargo.toml
@@ -3,5 +3,7 @@ authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
 name = "suburi"
 version = "0.1.0"
 
-[dependencies]
-sdl2 = "0.29.0"
+[dependencies.sdl2]
+version = "0.29"
+default-features = false
+features = ["gfx"]
