try to run the sample program for handling error code but cannot compile it
need to fix 2 things at least
- pop doesn't have city, country and count
- cannot recognize parameter

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
       "type": "lldb",
       "request": "launch",
       "name": "Debug",
-      "program": "${workspaceRoot}/suburi/target/debug/suburi",
+      "program": "${workspaceRoot}/city-pop/target/debug/city-pop",
       "sourceLanguages": ["rust"],
-      "args": [],
+      "args": ["-f", "test.csv"],
       "cwd": "${workspaceRoot}"
     }
   ]
