try to use rand in field.rs

--- a/suburi/Cargo.toml
+++ b/suburi/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [dependencies]
 env_logger = "0.4.3"
 log = "0.3.8"
+rand = "0.3.16"
 
 [dependencies.sdl2]
 default-features = false
