--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
-name = "suburi"
-version = "0.1.0"
+name = "rust_pack_man"
+version = "0.1.1"
 
 [dependencies]
 enum_primitive = "0.1.1"
