try to use 'lazy_static' for using global variables

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.1"
 [dependencies]
 enum_primitive = "0.1.1"
 env_logger = "0.4.3"
+lazy_static = "0.2.9"
 log = "0.3.8"
 num = "0.1.40"
 rand = "0.3.16"
